# On-a-journey

./: .gitignore  0000002488-24-000123.json  README.md  adjustment_detector.py  edgar_fetcher.py  eps_calculator.py  external_data.py  extract_key_facts.py  file_list.txt  filelist.txt  index.html  list_files.py  monitor_tickers.yaml  pipeline.py  pyproject.toml  python list_files.py  requirements.txt  tax_adjuster.py  update.yml
.github/workflow/: update.yml
.github/workflows/: 05_update.yml  Adjusted_Eps_Analyzer_update.yml  MACRO_PULSE_Update.yml  Market_Pulse_Update.yml  SEC_Data_Update.yml  TANUKI_CIK_Lookup.yml  TANUKI_VALUATION_Update.yml  collect_and_send.yml  collect_and_send.yml.bak  market_data.yml  market_data.yml.bak  tanuki_valuation_update.yml  update.yml
admin/: admin.js
common/sec_data/: __init__.py  config.py  fetcher.py  parser.py  reader.py  update.py
config/: adjustment_items.json  adjustment_items_v2.json  beta_config.json  cik_lookup.csv  cik_lookup_result.json  monitor_tickers.yaml  prompts.yaml  sectors.yaml  sectors_v2.yaml
data/: 05_events.csv
data/PLTR/: annual.json  quarterly.json  ttm.json
data/stock_event_timeline/: analysis.db
docs/: admin.html  app.js  index.html  stock.html  tickers.html
docs/data/: index.html  summary.json
docs/market-monitor/: index.html
docs/value-monitor/: index.html  (+2 more)
site/: USER_GUIDE.md  index.html
src/: adjustment_detector.py  ai_analyzer.py  edgar_fetcher.py  eps_calculator.py  extract_key_facts.py  maturity_monitor.py  pipeline.py  sector_classifier_v2.py  tax_adjuster.py  xbrl_parser.py
(+936 files in other folders)
