[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "on-a-journey"
version = "0.1.0"
description = "Investment analysis tools"
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "pyyaml>=6.0",
    "yfinance>=0.2.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "feedparser>=6.0",
    "fredapi>=0.5.0",
    "google-generativeai>=0.3.0",
    "discord-webhook>=1.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
    "plotly>=5.17.0",          # ← 追加
]

[tool.setuptools.packages.find]
where = ["src"]